# Persona-Forge

./: .gitignore  LICENSE  README.md  README_ZH.md  pyproject.toml
character_voice_lab/: cli.py  gpt_sovits.py  manifest.py  reference_bank.py  selector.py  synthesize.py
docs/: index.html
docs/assets/: site.css  site.js
examples/: minimal_profile.yaml
