[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-forge"
version = "0.1.0"
description = "A reusable character voice training toolkit built around GPT-SoVITS workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "SteinsGateSg" }
]
dependencies = []

[project.scripts]
persona-forge = "character_voice_lab.cli:main"
character-voice-lab = "character_voice_lab.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["character_voice_lab*"]
